api,admin,db/infra/k8s/overlays/test3/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service-test3
  namespace: test3
spec:
  selector:
    app: ubexgo-admin-test3
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
