api,admin,db/infra/k8s/overlays/test3/postgres.yaml
# ------------------------
# PostgreSQL Service
# ------------------------
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-test3
  namespace: test3
spec:
  type: ClusterIP
  selector:
    app: postgres-test3
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

---
# ------------------------
# PostgreSQL Deployment
# ------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-test3
  namespace: test3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-test3
  template:
    metadata:
      labels:
        app: postgres-test3
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-test3
