api,admin,db/infra/k8s/overlays/test3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubexgo-ingress
  namespace: test3
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  # tls:
  #   - hosts:
  #       - test3.fstu.uz
  #     secretName: test3-fstu-tls
  rules:
    - host: test3.fstu.uz
      http:
        paths:
          # Uploads must come before /api to be matched first
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: api-service-test3
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service-test3
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service-test3
                port:
                  number: 80
